// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.review-blocks-approval.acceptance given: [review-blocks] stone with review + approval guard when: [t1] human approves the stone then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.plan
   └─ ✓ approved
"
`;

exports[`driver.route.review-blocks-approval.acceptance given: [review-blocks] stone with review + approval guard when: [t2] pass attempted with approval but reviews still fail then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed 0.0s
   ├─ ✗ judge.1 - blocked 1.7s
   └─ ✓ judge.2 - allowed 1.7s

🗿 route.stone.set
   ├─ stone = 1.plan
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ 1.plan.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       ├─ finished [TIME] ✓
      │       ├─ review: .route/1.plan.guard.review.i1.0492a9fb2b499c70f4acde2cab892c6f7a39b07b00e33bbd020d47b3ede47ef0.r1.md
      │       └─ 1 blocker 🔴
      └─ judges
          ├─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 0
          │   ├─ finished [TIME] ✗
          │   └─ reason: blockers exceed threshold (1 > 0)
          └─ j2: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.review-blocks-approval.acceptance given: [review-blocks] stone with review + approval guard when: [t4] pass reattempted after fix then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed 0.0s
   ├─ ✓ judge.1 - allowed 1.2s
   └─ ✓ judge.2 - allowed 1.8s

🗿 route.stone.set
   ├─ stone = 1.plan
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 1.plan.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-review.sh
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/1.plan.guard.review.i1.d8ed0868a677f608e0a3c48cc7a8c7061dcdb60a0b154c7644d723ab94c25089.r1.md
      └─ judges
          ├─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 0
          │   └─ finished [TIME] ✓
          └─ j2: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              └─ finished [TIME] ✓
"
`;
